- Updated wiki documentation.
- Better W3C standard.
- Can add init data when enabling a module.
- Can fix some corruptions in database by calling the update page with
  action=repair
- Log files contains more information (PHP_SELD added and OS user used for 
  log of command lines scripts) 
- Can protect a module to not being enabled if javascript disabled.


***** Changelog for 2.6 compared to 2.5 *****

For users:
- New: Add filter on status in emailing selector for Dolibarr users.
- New: Can add bookmarks on all pages.
- New: Enhance bank transactions reporting.
- New: When creating a contact from a third party, informations from third
  party card are automatically suggested.
- New: Sort list of languages in combo box.
- New: EMails links are show with function dol_print_email
- New: Add graph report on number of entities in product statistics page.
- New: Can delete a supplier order whatever is its status.
- New: No limit on free text on PDF generated documents.
- New: Can force login value when creating a user from a member.
- New: Can clone commercial proposals and orders.
- New: Major enhancement of project module.
- New: Added product label in invoice exports fields.
- New: Add VAT number in export fields.
- New: Upgrade FPDF to 1.6
- New: Upgrade Scriptaculous to 1.8.2 and Prototype to 1.6.0.3
- New: Added keywords in PDF.
- New: Add hidden option MAIN_DISABLE_PDF_COMPRESSION.
- New: Add attachments on intervention cards.
- New: Can add personalized fields in emailing selectors.
- New: Customer code and supplier code can be defined automatically.
- New: Emailing feature can extract civility from contacts.
- New: Can create a third party from a member of foundation module.
- New: Can set a limit for stock alert to 0.
- New: Support SMTPS.
- New: Added a page /support to provide a help center service on Dolibarr.
- New: Distinct status "running not expired" from "running expired" in lines 
  contract status.